--- a/demonstrator/src/www/index.html
+++ b/demonstrator/src/www/index.html
@@ -18,6 +18,6 @@
     <script type="text/javascript" src="lib/underscore.js"></script>
     <script type="text/javascript" src="lib/jquery-1.8.2.js"></script>
     <script type="text/javascript" src="lib/backbone.js"></script>
-    <script type="text/javascript" src="js/app.js"></script>
+    <script type="text/javascript" data-main="js/app" src="lib/require-2.1.1.js"></script>
 </body>
 </html>
