--- a/demonstrator/src/www/index.html
+++ b/demonstrator/src/www/index.html
@@ -6,8 +6,10 @@
 <body>
     <div id="viewport">
         <div id="header"></div>
-        <div id="log"></div>
-        <div id="map"></div>
+        <div style="display: table; ">
+            <div id="log" style="display: table-cell; width: 250px;"></div>
+            <div id="map" style="display: table-cell;"></div>
+        </div>
         <div id="timeline"></div>
     </div>
 
