--- a/demonstrator/src/www/index.html
+++ b/demonstrator/src/www/index.html
@@ -7,12 +7,15 @@
     <div id="viewport">
         <div id="header"></div>
         <div id="log"></div>
-        <div id="map"></div>
+        <div id="map" style="height: 500px;"></div>
         <div id="timeline"></div>
     </div>
 
     <script type="text/template" id="log-item">
         <a href="#contact/<%= contact.id %>"><%= contact.name %></a> (<%= datetime %>)
+    </script>
+    <script type="text/javascript"
+      src="https://maps.google.com/maps/api/js?sensor=false">
     </script>
 
     <script type="text/javascript" src="lib/underscore.js"></script>
