--- a/demonstrator/src/www/index.html
+++ b/demonstrator/src/www/index.html
@@ -6,9 +6,9 @@
 <body>
     <div id="viewport">
         <div id="header"></div>
-        <div style="display: table; ">
-            <div id="log" style="display: table-cell; width: 250px;"></div>
-            <div id="map" style="display: table-cell; height: 500px;"></div>
+        <div style="height: 500px;">
+            <div id="log" style="position: relative; float: left; width: 250px; height: 100%; overflow-y: scroll;"></div>
+            <div id="map" style="position: relative; height: 100%;"></div>
         </div>
         <div id="timeline"></div>
     </div>
