--- a/demonstrator/src/www/index.html
+++ b/demonstrator/src/www/index.html
@@ -14,7 +14,7 @@
     </div>
 
     <script type="text/template" id="log-item">
-        <a href="#contact/<%= contact.id %>"><%= contact.name %></a> (<%= datetime %>)
+        <a href="#contact/<%= id %>"><%= mobileNr %></a>
     </script>
     <script type="text/javascript"
       src="https://maps.google.com/maps/api/js?sensor=false">
