--- a/demonstrator/src/www/index.html
+++ b/demonstrator/src/www/index.html
@@ -2,15 +2,21 @@
 <html>
 <head>
     <title>HTML5 Blueprint Demonstrator App</title>
+    <style type="text/css">
+        html, body {
+            margin: 0;
+            padding: 0;
+            height: 100%;
+        }
+    </style>
 </head>
 <body>
-    <div id="viewport">
-        <div id="header"></div>
-        <div style="height: 500px;">
+    <div id="viewport" style="height: 100%">
+        <div id="header" style="height: 50px;"></div>
+        <div style="height: 100%;">
             <div id="log" style="position: relative; float: left; width: 250px; height: 100%; overflow-y: scroll;"></div>
             <div id="map" style="position: relative; height: 100%;"></div>
         </div>
-        <div id="timeline"></div>
     </div>
 
     <script type="text/template" id="log-item">
